# settings

./: .gitignore  .gitlab-ci.yml  AUTHORS  Makefile.am  NEWS  README.md  TODO  autogen.sh  configure.ac.in
common/: Makefile.am  display-name.c  display-profiles.c  display-profiles.h  expidus-randr.c  expidus-randr.h
dialogs/accessibility-settings/: Makefile.am  accessibility-dialog.glade  expidus1-accessibility-settings.desktop.in  find-cursor.c  main.c
dialogs/appearance-settings/: Makefile.am  appearance-dialog.glade  appearance-install-theme  expidus-ui-settings.desktop.in  images.h  main.c
dialogs/color-settings/: Makefile.am  color-dialog.glade  expidus1-color-settings.desktop.in  main.c
dialogs/display-settings/: Makefile.am  display-dialog.glade  expidus-display-settings.desktop.in  main.c  minimal-display-dialog.glade
dialogs/keyboard-settings/: Makefile.am  command-dialog.c  command-dialog.h  expidus-keyboard-settings.c  expidus-keyboard-settings.desktop.in  expidus-keyboard-settings.h  keyboard-dialog.glade  main.c
dialogs/mime-settings/: Makefile.am  expidus-mime-chooser.c  expidus-mime-chooser.h  expidus-mime-helper-chooser.c  expidus-mime-helper-chooser.h  expidus-mime-helper-launcher-dialog.c  expidus-mime-helper-launcher-dialog.h  expidus-mime-helper-main.c  expidus-mime-helper-utils.c  expidus-mime-helper-utils.h  expidus-mime-helper.c  expidus-mime-helper.h  expidus-mime-window.c  expidus-mime-window.h  expidus1-file-manager.desktop.in  expidus1-mail-reader.desktop.in  expidus1-mime-settings.desktop.in  expidus1-terminal-emulator.desktop.in  expidus1-web-browser.desktop.in  main.c
dialogs/mime-settings/helpers/: Makefile.am  aterm.desktop.in.in  balsa.desktop.in.in  brave.desktop.in.in  caja.desktop.in.in  chromium.desktop.in.in  debian-sensible-browser.desktop.in.in  debian-x-terminal-emulator.desktop.in.in  dillo.desktop.in.in  encompass.desktop.in.in  epiphany.desktop.in.in  eterm.desktop.in.in  evolution.desktop.in.in  expidus1-compose-mail  expidus1-terminal.desktop.in.in  firefox.desktop.in.in  galeon.desktop.in.in  geary.desktop.in.in  gnome-terminal.desktop.in.in  google-chrome.desktop.in.in  helpers.rc  icecat.desktop.in.in  icedove.desktop.in.in  iceweasel.desktop.in.in  jumanji.desktop.in.in  kmail.desktop.in.in  konqueror.desktop.in.in  links.desktop.in.in  lynx.desktop.in.in  midori.desktop.in.in  mozilla-browser.desktop.in.in  mozilla-mailer.desktop.in.in  mutt.desktop.in.in  nautilus.desktop.in.in  netscape-navigator.desktop.in.in  nxterm.desktop.in.in  opera-browser.desktop.in.in  opera-mailer.desktop.in.in  pcmanfm-qt.desktop.in.in  pcmanfm.desktop.in.in  (+17 more)
dialogs/mouse-settings/: Makefile.am  expidus-mouse-settings.desktop.in  main.c  mouse-dialog.glade
essettingsd/: Makefile.am  accessibility.c  accessibility.h  clipboard-manager.c  debug.c  debug.h  displays-upower.c  displays-upower.h  displays.c  displays.h  essettingsd.desktop.in  gtk-decorations.c  gtk-decorations.h  keyboard-layout.c  keyboard-layout.h  keyboard-shortcuts.c  keyboard-shortcuts.h  keyboards.c  keyboards.h  main.c  pointers-defines.h  pointers.c  pointers.h  workspaces.c  workspaces.h  xsettings.c  xsettings.h  xsettings.xml
expidus1-settings-editor/: Makefile.am  expidus-settings-cell-renderer.c  expidus-settings-cell-renderer.h  expidus-settings-editor-box.c  expidus-settings-editor-box.h  expidus-settings-prop-dialog.c  expidus-settings-prop-dialog.h  expidus1-settings-editor.desktop.in  main.c
expidus1-settings-manager/: Makefile.am  expidus-settings-manager-dialog.c  expidus-settings-manager-dialog.h  expidus-settings-manager.desktop.in  expidus-settings-manager.menu  main.c
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
po/: POTFILES.in  am.po  ar.po  ast.po  be.po  be@tarask.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  nn.po  (+22 more)
