
iconsdir = $(datadir)/icons/hicolor/128x128/apps
icons_DATA = \
	com.expidus.filemanager.png	\
	com.expidus.mailreader.png	\
	com.expidus.terminalemulator.png	\
	com.expidus.webbrowser.png	\
	com.expidus.settings.accessibility.png		\
	com.expidus.settings.appearance.png		\
	com.expidus.settings.color.png		\
	com.expidus.settings.display.png		\
	com.expidus.settings.editor.png		\
	com.expidus.settings.keyboard.png		\
	com.expidus.settings.manager.png		\
	com.expidus.settings.mouse.png		\
	com.expidus.settings.default-applications.png

EXTRA_DIST = \
	$(icons_DATA)
