
iconsdir = $(datadir)/icons/hicolor/scalable/apps
icons_DATA = \
	com.expidus.filemanager.svg	\
	com.expidus.mailreader.svg	\
	com.expidus.terminalemulator.svg	\
	com.expidus.webbrowser.svg	\
	com.expidus.settings.accessibility.svg		\
	com.expidus.settings.appearance.svg		\
	com.expidus.settings.color.svg		\
	com.expidus.settings.display.svg		\
	com.expidus.settings.editor.svg		\
	com.expidus.settings.keyboard.svg		\
	com.expidus.settings.manager.svg		\
	com.expidus.settings.mouse.svg		\
	com.expidus.settings.default-applications.svg

EXTRA_DIST = \
	$(icons_DATA)
